--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+// VARIABLES 
 
+$font: "Poppins", 'sans-serif';
+$dark: #292929;
+$light: #fff;
+$green: #8DF50B;
 //reset
 
 * {
@@ -8,14 +13,13 @@
     padding: 0;
 }   
 
+body {
+    font-family: $font;
+}
+
 
 ul {
     list-style: none;
 }
 
-// VARIABLES 
 
-$font: "Poppins", 'sans-serif';
-$dark: #292929;
-$light: #fff;
-$green: #8DF50B;
