--- a/scss/style.css
+++ b/scss/style.css
@@ -1,2 +1,129 @@
-@import url("./_global.scss");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Poppins", "sans-serif";
+}
+
+ul {
+  list-style: none;
+}
+
+.main {
+  height: 100vh;
+  background-color: #292929;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: left;
+}
+
+.main__title {
+  color: #fff;
+  font-size: 1.2rem;
+}
+
+.main__title span {
+  display: block;
+  color: #8DF50B;
+}
+
+.main__flame {
+  margin-top: 4.5rem;
+  width: 60px;
+  height: 60px;
+  position: relative;
+  -webkit-animation: move 500ms 200ms ease-in infinite alternate;
+          animation: move 500ms 200ms ease-in infinite alternate;
+}
+
+.main__flame__single {
+  position: absolute;
+  bottom: 0;
+  border-radius: 50% 0 50% 50%;
+  -webkit-transform: rotate(-45deg) scale(1.5, 1.5);
+          transform: rotate(-45deg) scale(1.5, 1.5);
+}
+
+.main__svg {
+  position: absolute;
+  bottom: 0%;
+}
+
+.red {
+  left: 5px;
+  width: 50px;
+  height: 50px;
+  background: red;
+  -webkit-box-shadow: 0px 0px 35px 4px red;
+          box-shadow: 0px 0px 35px 4px red;
+}
+
+.orange {
+  left: 12px;
+  width: 35px;
+  height: 35px;
+  background: orange;
+  -webkit-box-shadow: 0px 0px 9px 4px orange;
+          box-shadow: 0px 0px 9px 4px orange;
+}
+
+.social {
+  position: absolute;
+  bottom: 1.5rem;
+  right: 1.5rem;
+}
+
+.social__icon {
+  margin: .5rem auto;
+}
+
+@-webkit-keyframes move {
+  0% {
+    -webkit-transform: rotate(-4deg);
+            transform: rotate(-4deg);
+  }
+  50% {
+    -webkit-transform: rotate(-1deg);
+            transform: rotate(-1deg);
+    -webkit-transform: scaleY(1.006);
+            transform: scaleY(1.006);
+  }
+  100% {
+    -webkit-transform: rotate(4deg);
+            transform: rotate(4deg);
+  }
+}
+
+@keyframes move {
+  0% {
+    -webkit-transform: rotate(-4deg);
+            transform: rotate(-4deg);
+  }
+  50% {
+    -webkit-transform: rotate(-1deg);
+            transform: rotate(-1deg);
+    -webkit-transform: scaleY(1.006);
+            transform: scaleY(1.006);
+  }
+  100% {
+    -webkit-transform: rotate(4deg);
+            transform: rotate(4deg);
+  }
+}
 /*# sourceMappingURL=style.css.map */
