--- a/scss/_project.scss
+++ b/scss/_project.scss
@@ -1,18 +1,34 @@
 .project {
-    height: 100vh;
-    background-color: $light;
+    background-color: $dark;
+    color: $light;
+    min-height: 100vh;
     text-align: center;
     margin: auto;
-    width: 80%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     &__wrapper {
         height: 100%;
         display: grid;
+        width: 80%;
+        margin: 1rem 0 5rem 0;
+        // background-color: red;
+    }
+    &__svg {
+        position: absolute;
+        bottom: 0%;
+        left: 0%;
+        width: 100%;
+        margin-bottom: -1px;
     }
 }
 
 .list {
-    margin-top: 2rem;
+
     &__item {
-        margin: 1rem auto;
+        margin: 1.5rem auto;
     }
+
 }
