--- a/scss/style.css
+++ b/scss/style.css
@@ -19,6 +19,10 @@ img {
   width: 100%;
 }
 
+h1 {
+  margin: 0;
+}
+
 .main {
   height: 100vh;
   background-color: #292929;
@@ -68,6 +72,7 @@ img {
 .main__svg {
   position: absolute;
   bottom: 0%;
+  margin-bottom: -1px;
 }
 
 .red {
@@ -133,24 +138,63 @@ img {
 }
 
 .project {
-  height: 100vh;
-  background-color: #fff;
+  background-color: #292929;
+  color: #fff;
+  min-height: 100vh;
   text-align: center;
   margin: auto;
-  width: 80%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .project__wrapper {
   height: 100%;
   display: -ms-grid;
   display: grid;
+  width: 80%;
+  margin: 1rem 0 5rem 0;
 }
 
-.list {
-  margin-top: 2rem;
+.project__svg {
+  position: absolute;
+  bottom: 0%;
+  left: 0%;
+  width: 100%;
+  margin-bottom: -1px;
 }
 
 .list__item {
-  margin: 1rem auto;
+  margin: 1.5rem auto;
+}
+
+.skills {
+  height: 100vh;
+  background-color: #fff;
+  color: #292929;
+  text-align: center;
+  position: relative;
+}
+
+.skills__svg {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin-bottom: -1px;
+}
+
+.test {
+  fill: #fff;
 }
 /*# sourceMappingURL=style.css.map */
