--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,6 +1,80 @@
 .contact {
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     &__title {
         text-align: center;
     }
+}
+
+.form {
+    height: 500px;
+    width: 75%;
+    margin: auto;
+    border-radius: 2rem;
+    background-color: $light;
+    color: $dark;
+
+    &__title {
+        font-weight: bold;
+        margin-bottom: 3rem;
+        text-align: center;
+        
+    }
+    &__wrapp {
+        position: relative;
+        height: 48px;
+        margin-bottom: 1.5rem;
+    }
+    &__input {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        font-family:$font;
+        padding: 5px;
+        border-radius: 15px;
+        outline: none;
+        border: 2px solid;
+        &:focus {
+            border-color: $green;
+        }
+    }
+    &__label {
+        position: absolute;
+        top: .7rem;
+        left: 1rem;
+        color: $dark;
+        padding:0 .25rem;
+        background-color: $light;
+        transition: .3s;
+        color:orange;
+        font-weight: 500;
+        font-size: .8rem;
+    }
+    &__btn {
+        display: block;
+        margin-right: auto;
+        margin-top: 4rem;
+        padding: .7rem 2rem;
+        border-radius: 50px;
+        cursor: pointer;
+        border: none;
+        transition: .3s ease-in-out;
+        &:hover {
+            box-shadow: 0 2px 16px rgb(6, 80, 141);
+        }
+    }
+
+}
+
+.form__input:focus + .form__label {
+    transform: translateY(-99%);
+    z-index: 10;
+}
+
+.text {
+    height: 100px;
 }
