--- a/scss/style.css
+++ b/scss/style.css
@@ -239,9 +239,97 @@ a {
 
 .contact {
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .contact__title {
   text-align: center;
+}
+
+.form {
+  height: 500px;
+  width: 75%;
+  margin: auto;
+  border-radius: 2rem;
+  background-color: #fff;
+  color: #292929;
+}
+
+.form__title {
+  font-weight: bold;
+  margin-bottom: 3rem;
+  text-align: center;
+}
+
+.form__wrapp {
+  position: relative;
+  height: 48px;
+  margin-bottom: 1.5rem;
+}
+
+.form__input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-family: "Poppins", "sans-serif";
+  padding: 5px;
+  border-radius: 15px;
+  outline: none;
+  border: 2px solid;
+}
+
+.form__input:focus {
+  border-color: #8DF50B;
+}
+
+.form__label {
+  position: absolute;
+  top: .7rem;
+  left: 1rem;
+  color: #292929;
+  padding: 0 .25rem;
+  background-color: #fff;
+  -webkit-transition: .3s;
+  transition: .3s;
+  color: orange;
+  font-weight: 500;
+  font-size: .8rem;
+}
+
+.form__btn {
+  display: block;
+  margin-right: auto;
+  margin-top: 4rem;
+  padding: .7rem 2rem;
+  border-radius: 50px;
+  cursor: pointer;
+  border: none;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+.form__btn:hover {
+  -webkit-box-shadow: 0 2px 16px #06508d;
+          box-shadow: 0 2px 16px #06508d;
+}
+
+.form__input:focus + .form__label {
+  -webkit-transform: translateY(-99%);
+          transform: translateY(-99%);
+  z-index: 10;
+}
+
+.text {
+  height: 100px;
 }
 /*# sourceMappingURL=style.css.map */
