--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -5,11 +5,11 @@
     align-items: center;
     &__title {
         text-align: center;
-    }
+        }
 }
 
 .form {
-    height: 500px;
+    min-height: 500px;
     width: 75%;
     margin: auto;
     border-radius: 2rem;
@@ -29,7 +29,6 @@
     }
     &__input {
         position: absolute;
-        top: 0;
         left: 0;
         width: 100%;
         height: 100%;
@@ -38,10 +37,13 @@
         border-radius: 15px;
         outline: none;
         border: 2px solid;
+        padding: 1rem;
         &:focus {
             border-color: $green;
         }
+    
     }
+
     &__label {
         position: absolute;
         top: .7rem;
@@ -49,15 +51,14 @@
         color: $dark;
         padding:0 .25rem;
         background-color: $light;
-        transition: .3s;
+        transition: .3s ease-in-out;
         color:orange;
         font-weight: 500;
         font-size: .8rem;
     }
     &__btn {
-        display: block;
         margin-right: auto;
-        margin-top: 4rem;
+        margin-top: 3.5rem;
         padding: .7rem 2rem;
         border-radius: 50px;
         cursor: pointer;
@@ -71,10 +72,19 @@
 }
 
 .form__input:focus + .form__label {
-    transform: translateY(-99%);
+    transform: translateY(-100%);
     z-index: 10;
 }
 
 .text {
     height: 100px;
+}
+
+.active {
+    transform: translateY(-100%);
+    z-index: 10;
+}
+
+.inactive {
+    transform: translateY(-100%);
 }
