--- a/scss/style.css
+++ b/scss/style.css
@@ -255,7 +255,7 @@ a {
 }
 
 .form {
-  height: 500px;
+  min-height: 500px;
   width: 75%;
   margin: auto;
   border-radius: 2rem;
@@ -277,7 +277,6 @@ a {
 
 .form__input {
   position: absolute;
-  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
@@ -286,6 +285,7 @@ a {
   border-radius: 15px;
   outline: none;
   border: 2px solid;
+  padding: 1rem;
 }
 
 .form__input:focus {
@@ -299,17 +299,16 @@ a {
   color: #292929;
   padding: 0 .25rem;
   background-color: #fff;
-  -webkit-transition: .3s;
-  transition: .3s;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
   color: orange;
   font-weight: 500;
   font-size: .8rem;
 }
 
 .form__btn {
-  display: block;
   margin-right: auto;
-  margin-top: 4rem;
+  margin-top: 3.5rem;
   padding: .7rem 2rem;
   border-radius: 50px;
   cursor: pointer;
@@ -324,12 +323,23 @@ a {
 }
 
 .form__input:focus + .form__label {
-  -webkit-transform: translateY(-99%);
-          transform: translateY(-99%);
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
   z-index: 10;
 }
 
 .text {
   height: 100px;
+}
+
+.active {
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  z-index: 10;
+}
+
+.inactive {
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
 }
 /*# sourceMappingURL=style.css.map */
