--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -13,11 +13,13 @@
     &__title {
         margin-top: 1rem;
     }
+
 }
 
 .knowledge {
     display: flex;
     flex-direction: column;
+
     justify-content: center;
     align-items: center;
     &__item {
@@ -25,10 +27,19 @@
         margin: 1rem auto;
             img {
                 height: 80px;
+                @media (min-width:768px) {
+                    height: 50px;
+                }
             }
             &:last-child {
                 margin-bottom: 5rem;
             }
+    }
+    @media (min-width:768px) {
+        margin-top: 2rem;
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: repeat(2,1fr );
     }
 }
 
