--- a/scss/_project.scss
+++ b/scss/_project.scss
@@ -15,6 +15,7 @@
         width: 80%;
         margin: 1rem 0 5rem 0;
         // background-color: red;
+ 
     }
     &__svg {
         position: absolute;
@@ -23,6 +24,7 @@
         width: 100%;
         margin-bottom: -1px;
     }
+
 }
 
 .list {
@@ -30,5 +32,11 @@
     &__item {
         margin: 1.5rem auto;
     }
-
+    @media (min-width:768px) {
+        margin: 2rem auto;
+        // margin-top: 2rem;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: repeat(2,1fr );
+    }
 }
