--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -28,7 +28,7 @@
             img {
                 height: 80px;
                 @media (min-width:768px) {
-                    height: 50px;
+                    height: 60px;
                 }
             }
             &:last-child {
@@ -38,7 +38,7 @@
     @media (min-width:768px) {
         margin-top: 2rem;
         display: grid;
-        grid-template-columns: repeat(4,1fr);
+        grid-template-columns: repeat(4,200px);
         grid-template-rows: repeat(2,1fr );
     }
 }
