--- a/scss/style.css
+++ b/scss/style.css
@@ -271,7 +271,7 @@ a {
 
 @media (min-width: 768px) {
   .knowledge__item img {
-    height: 50px;
+    height: 60px;
   }
 }
 
@@ -284,8 +284,8 @@ a {
     margin-top: 2rem;
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[4];
-        grid-template-columns: repeat(4, 1fr);
+    -ms-grid-columns: (200px)[4];
+        grid-template-columns: repeat(4, 200px);
     -ms-grid-rows: (1fr)[2];
         grid-template-rows: repeat(2, 1fr);
   }
@@ -381,6 +381,12 @@ a {
 .form__btn:hover {
   -webkit-box-shadow: 0 2px 16px #06508d;
           box-shadow: 0 2px 16px #06508d;
+}
+
+@media (min-width: 768px) {
+  .form {
+    width: 25%;
+  }
 }
 
 .form__input:focus + .form__label {
