--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,4 +1,5 @@
 .contact {
+    position: relative;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -89,4 +90,15 @@
 
 .inactive {
     transform: translateY(-100%);
+}
+
+.copy {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    width: 100%;
+    padding: .5rem;
+    font-weight: 500;
+    letter-spacing: 1px;
 }
