--- a/scss/_project.scss
+++ b/scss/_project.scss
@@ -4,19 +4,11 @@
     min-height: 100vh;
     text-align: center;
     margin: auto;
-    position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+    text-align: center;
     align-items: center;
-    &__wrapper {
-        height: 100%;
-        display: grid;
-        width: 80%;
-        margin: 1rem 0 5rem 0;
-        // background-color: red;
- 
-    }
     &__svg {
         position: absolute;
         bottom: 0%;
@@ -27,16 +19,29 @@
 
 }
 
-.list {
 
+.wrapper {
+    width: 85%;
+    margin: 4rem auto;
+}
+
+
+.bar {
+    display: flex;
+    justify-content: center;
+    background-color: $light;
+    padding: 1rem 2rem;
     &__item {
-        margin: 1.5rem auto;
+        margin: auto 1rem;
+        a {
+            color: $dark;
+        }
     }
-    @media (min-width:768px) {
-        margin: 2rem auto;
-        // margin-top: 2rem;
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
-        grid-template-rows: repeat(2,1fr );
-    }
+}
+
+.active {
+    background-color: $orange;
+    padding: .5rem;
+}
+.open {
 }
