--- a/scss/style.css
+++ b/scss/style.css
@@ -8,6 +8,7 @@
 
 body {
   font-family: "Poppins", "sans-serif";
+  overflow-x: hidden;
 }
 
 ul {
@@ -88,7 +89,6 @@ a {
 .main__svg {
   position: absolute;
   bottom: 0%;
-  margin-bottom: -1px;
 }
 
 @media (min-width: 768px) {
@@ -178,7 +178,6 @@ a {
   min-height: 100vh;
   text-align: center;
   margin: auto;
-  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -186,20 +185,13 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  text-align: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.project__wrapper {
-  height: 100%;
-  display: -ms-grid;
-  display: grid;
-  width: 80%;
-  margin: 1rem 0 5rem 0;
 }
 
 .project__svg {
@@ -210,20 +202,33 @@ a {
   margin-bottom: -1px;
 }
 
-.list__item {
-  margin: 1.5rem auto;
+.wrapper {
+  width: 85%;
+  margin: 4rem auto;
 }
 
-@media (min-width: 768px) {
-  .list {
-    margin: 2rem auto;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-    -ms-grid-rows: (1fr)[2];
-        grid-template-rows: repeat(2, 1fr);
-  }
+.bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #fff;
+  padding: 1rem 2rem;
+}
+
+.bar__item {
+  margin: auto 1rem;
+}
+
+.bar__item a {
+  color: #292929;
+}
+
+.active {
+  background-color: orange;
+  padding: .5rem;
 }
 
 .skills {
@@ -309,6 +314,7 @@ a {
 }
 
 .contact {
+  position: relative;
   height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -418,5 +424,16 @@ a {
 .inactive {
   -webkit-transform: translateY(-100%);
           transform: translateY(-100%);
+}
+
+.copy {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  width: 100%;
+  padding: .5rem;
+  font-weight: 500;
+  letter-spacing: 1px;
 }
 /*# sourceMappingURL=style.css.map */
