--- a/scss/_project.scss
+++ b/scss/_project.scss
@@ -9,6 +9,13 @@
     justify-content: flex-start;
     text-align: center;
     align-items: center;
+    
+    &__work {
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        overflow: hidden;
+        border: 4px solid $green;
+    }
     &__svg {
         position: absolute;
         bottom: 0%;
@@ -18,8 +25,6 @@
     }
 
 }
-
-
 .wrapper {
     width: 85%;
     margin: 4rem auto;
@@ -40,8 +45,26 @@
 }
 
 .active {
-    background-color: $orange;
+    background-color: $green;
     padding: .5rem;
 }
 .open {
+    background-color: $green;
+    padding: 1rem;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    &__list {
+        display: grid;
+        grid-template-columns: repeat(1,1fr );
+        @media (min-width:768px) {
+            grid-template-columns: repeat(3,1fr );
+            grid-template-rows: repeat(2,1fr );
+        }
+        &__item {
+            img {
+                width: 50%;
+            }
+        }
+    }
+
 }
