--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -42,7 +42,7 @@
         margin-top: 2rem;
         display: grid;
         grid-gap: 2px;
-        grid-template-columns: repeat(4,200px);
+        grid-template-columns: repeat(4,220px);
         grid-template-rows: repeat(2,auto);
     }
 }
@@ -52,4 +52,11 @@
     text-transform: uppercase;
     letter-spacing: 2px;
     color: $orange;
+}
+
+.title {
+    color: $green;
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 1px;
 }
