Remove skill&project section | desktop / mobile

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -2,10 +2,10 @@
 // VARIABLES 
 
 $font: "Poppins", 'sans-serif';
-$dark: #292929;
+$orange: #3e5c76;
 $light: #fff;
-$green: #8DF50B;
-$orange: orange;
+$green: #748cab;
+$dark: #0d1321;
 //reset
 
 * {
