--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -53,7 +53,7 @@
         padding:0 .25rem;
         background-color: $light;
         transition: .3s ease-in-out;
-        color:orange;
+        color:$orange;
         font-weight: 500;
         font-size: .8rem;
     }
