--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -72,6 +72,7 @@
     position: absolute;
     bottom: 1.5rem;
     right: 1.5rem;
+    cursor: pointer;
     &__icon {
         margin: .5rem auto;
     }
