--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,5 +1,6 @@
 .main {
-    height: 100vh;
+    position: relative;
+    height:77vh;
     background-color: $dark;
     display: flex;
     flex-direction: column;
@@ -35,16 +36,18 @@
         }
     }
     &__svg {
-        // background-color: red;
-        // height: 100%;
         position: absolute;
-        bottom:0%;
-
+        top:100%;
+        left: 0%;
+        margin: -1px;
+        width: 100%;
+        height: 250px;
+        z-index: 999;
+   
     }
     @media (min-width: 768px) {
         flex-direction: row;
         position: relative;
-        top: -4rem;
         justify-content: space-around;
     }
 }
@@ -70,14 +73,14 @@
 
 .social {
     position: absolute;
-    bottom: 1.5rem;
+    bottom: 0;
     right: 1.5rem;
     cursor: pointer;
     &__icon {
         margin: .5rem auto;
     }
     @media (min-width: 768px) {
-        bottom: 3.5rem;
+        bottom: 0;
     }
 }
 
@@ -93,3 +96,5 @@
         transform: rotate(4deg);
     }
 }
+
+
