--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 @import "_global.scss";
 @import "_main.scss";
-@import "_project.scss";
-@import "_skills.scss";
+// @import "_project.scss";
+@import "_present.scss";
 @import "_contact";
