--- a/scss/_present.scss
+++ b/scss/_present.scss
@@ -42,6 +42,7 @@
 
      &__title {
         @include background();
+        margin-top: 5rem;
          &::before {
             @include backgroundBefore();
             left: 0;
@@ -50,6 +51,7 @@
      }
      &__title--project {
          width: fit-content;
+         margin-top: 5rem;
          @include background();
          &::before {
              @include backgroundBefore();
@@ -59,26 +61,17 @@
      }
 }
 
-.reverse {
-    transform: rotate(180deg);
-    background-color: $dark ;
-}
-.custom-shape-divider-bottom-1620567558 svg {
-    position: relative;
-    display: block;
-    width: calc(100% + 1.3px);
-    height: 156px;
-    transform: rotateY(180deg);
-}
+
 
 // skill
 
 .list {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2,1fr );
     grid-gap: 1rem;
+    width: fit-content;
     flex-direction: column;
-    margin: 2rem auto   ;
+    margin: 2rem auto 0 auto;
     &__item {
         text-align: center;
         a {
@@ -87,22 +80,64 @@
         &__img {
             margin-top: .2rem;
             height: 50px;
+            @media (min-width:768px) {
+                width: 100%; 
+                height: 70px;
+
+            }
         }
+    }
+    @media(min-width:768px) {
+        grid-gap: 1.5rem;
+        grid-template-columns: repeat(3,1fr );
+        grid-template-rows: repeat(2,1fr );
     }
 }
 
 // project
 
+.project {
+    margin-top: 4rem;
+    margin-bottom: 6rem;
+
+}
+
 .work {
     display: grid;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    grid-template-columns: repeat(1,1fr );
+    grid-template-columns: repeat(2,1fr );
     align-items: center;
-    margin: 2rem 2rem 6rem 2rem;
+    width: fit-content;
+    grid-gap: 2rem;
+    margin: 2rem auto 5rem auto;    
     &__item {
         img {
             width: 100%;
+
+            @media(min-width:768px) {
+                height: 250px;
+                width: 400px;
+            }
         }
     }
+    @media(min-width:768px) {
+        justify-content: center;
+        align-items: center;
+        grid-template-columns: repeat(3,1fr );
+        grid-template-rows: repeat(2,1fr );
+    }
+}
+
+
+.reverse {
+    transform: rotate(180deg);
+    background-color: $dark;
+}
+.custom-shape-divider-bottom-1620567558 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 156px;
+    transform: rotateY(180deg);
 }
