--- a/scss/style.css
+++ b/scss/style.css
@@ -225,6 +225,7 @@ a {
   margin-left: 2rem;
   position: relative;
   z-index: 99;
+  margin-top: 5rem;
 }
 
 .tech__title::before {
@@ -241,6 +242,7 @@ a {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  margin-top: 5rem;
   font-weight: 500;
   margin-left: 2rem;
   position: relative;
@@ -257,32 +259,20 @@ a {
   width: 100px;
 }
 
-.reverse {
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
-  background-color: #0d1321;
-}
-
-.custom-shape-divider-bottom-1620567558 svg {
-  position: relative;
-  display: block;
-  width: calc(100% + 1.3px);
-  height: 156px;
-  -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
-}
-
 .list {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
   grid-gap: 1rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 2rem auto;
+  margin: 2rem auto 0 auto;
 }
 
 .list__item {
@@ -298,23 +288,86 @@ a {
   height: 50px;
 }
 
+@media (min-width: 768px) {
+  .list__item__img {
+    width: 100%;
+    height: 70px;
+  }
+}
+
+@media (min-width: 768px) {
+  .list {
+    grid-gap: 1.5rem;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
+  }
+}
+
+.project {
+  margin-top: 4rem;
+  margin-bottom: 6rem;
+}
+
 .work {
   display: -ms-grid;
   display: grid;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-grid-columns: (1fr)[1];
-      grid-template-columns: repeat(1, 1fr);
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
   align-items: center;
-  margin: 2rem 2rem 6rem 2rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  grid-gap: 2rem;
+  margin: 2rem auto 5rem auto;
 }
 
 .work__item img {
   width: 100%;
+}
+
+@media (min-width: 768px) {
+  .work__item img {
+    height: 250px;
+    width: 400px;
+  }
+}
+
+@media (min-width: 768px) {
+  .work {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
+  }
+}
+
+.reverse {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  background-color: #0d1321;
+}
+
+.custom-shape-divider-bottom-1620567558 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 156px;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
 }
 
 .contact {
