--- a/scss/_present.scss
+++ b/scss/_present.scss
@@ -106,19 +106,22 @@
     display: grid;
     justify-content: flex-start;
     align-items: center;
-    grid-template-columns: repeat(2,1fr );
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr ));
     align-items: center;
-    width: fit-content;
-    grid-gap: 2rem;
-    margin: 2rem auto 5rem auto;    
+    width: 80%;
+    grid-gap: 5rem;
+    margin: 4rem auto 6rem auto;    
     &__item {
+        justify-content: center;
         img {
             width: 100%;
 
-            @media(min-width:768px) {
-                height: 250px;
-                width: 400px;
-            }
+            // @media(min-width:768px) {
+            //     width: 70%;
+            // }
+        }
+        @media(min-width:768px) {
+            // width: 40%;
         }
     }
     @media(min-width:768px) {
