--- a/scss/style.css
+++ b/scss/style.css
@@ -319,25 +319,22 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   align-items: center;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  grid-gap: 2rem;
-  margin: 2rem auto 5rem auto;
+  width: 80%;
+  grid-gap: 5rem;
+  margin: 4rem auto 6rem auto;
+}
+
+.work__item {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .work__item img {
   width: 100%;
-}
-
-@media (min-width: 768px) {
-  .work__item img {
-    height: 250px;
-    width: 400px;
-  }
 }
 
 @media (min-width: 768px) {
